src/portfolio/components/project-hub/carousel/projectCarousel.scss
@use '/src/sass/functions' as f;
@use '/src/portfolio/scss/portfolioStyles' as s;

.projectHub {
  display: flex;
  flex-direction: column;
  overflow: visible;
  @media (width <= 1480px) {
    height: max-content;
  }
  & h2 {
    display: none;
  }
}

@keyframes mainAnimatorOut {
  0% {
    trasform: scale(0);
  }
  33% {
    transform: scale(0.8);
    transform: translateX(0) scale(0.8);
    opacity: 1;
  }
  66% {
    opacity: 0;
  }
  100% {
    transform: translateX(-100%) scale(0.8);
    opacity: 0;
  }
}

@keyframes mainAnimatorIn {
  0% {
    transform: translateX(100%) scale(0.8);
    opacity: 0;
  }
  33% {
    opacity: 0;
  }
  66% {
    transform: translateX(0) scale(0.8);
    opacity: 1;
  }
  100% {
    trasform: scale(0);
  }
}

.mainContent {
  height: 100%;
  max-height: 76svh;
  overflow: visible clip;
  &[data-status='disabled'] {
    animation: mainAnimatorOut 1s forwards;
  }
  &[data-status='active'] {
    animation: mainAnimatorIn 1s forwards;
  }
  @media (width <= 1480px) {
    height: max-content;
  }
  &__track {
    position: relative;
    display: flex;
    align-items: center;
    width: max-content;
    height: inherit;
    max-height: inherit;
    padding: 0 s.$box-model-viewport-x;
    @media (width <= 1000px) {
      padding: 0 calc(s.$box-model-viewport-x / 2);
      margin: s.$box-model-viewport-x / 2 0;
    }
    &:hover {
      cursor: grab;
    }
    &:active {
      cursor: grabbing;
    }
    &[data-status='smooth'] {
      transition: s.$carousel-track-transition;
    }
    &__project {
      width: 75.19%;
      height: inherit;
      max-height: inherit;
      // aspect-ratio: 1.99/1;
      background-color: black;
      will-change: width, transform, filter;
      transform-origin: bottom;
      &[data-status='smooth'] {
        transition: all 360ms ease-in-out;
      }
      &[data-status='disabled'] {
        transform: scale(0.8);
        transform-origin: bottom;
        filter: grayscale(85%) sepia(80%) brightness(50%);
      }
      @media (width <= 1480px) {
        width: 76svw;
        height: auto;
      }
      @media (width <= 1000px) {
        width: 90svw;
        aspect-ratio: unset;
      }
      & a {
        display: block;
        height: 100%;
        max-height: inherit;
        &:hover {
          cursor: pointer;
        }
        &:active {
          cursor: grabbing;
        }
        & figure,
        & picture {
          height: inherit;
          max-height: inherit;
        }
        & figure picture img {
          object-fit: contain;
          filter: brightness(92%);
        }
      }
    }
  }
}

